# ChangeLog for games-engines/ONSlaught
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*ONSlaught-20110316 (18 Mar 2011)

  18 Mar 2011; Michał Ziąbkowski <mziab@o2.pl> +ONSlaught-20110316.ebuild:
  Bumped.

*ONSlaught-20110315 (15 Mar 2011)

  15 Mar 2011; Michał Ziąbkowski <mziab@o2.pl> +ONSlaught-20110315.ebuild:
  Bumped.

  14 Dec 2010; Michał Ziąbkowski <mziab@o2.pl> ONSlaught-20100714.ebuild:
  Fixed build.

*ONSlaught-20100714 (17 Jul 2010)

  17 Jul 2010; Michał Ziąbkowski <mziab@o2.pl> +ONSlaught-20100714.ebuild:
  Bumped.

  21 Dec 2009; Michał Ziąbkowski <mziab@o2.pl> -ONSlaught-20090126.ebuild,
  -ONSlaught-20090307.ebuild, -ONSlaught-20090715.ebuild:
  Removed cruft.

  15 Dec 2009; Michał Ziąbkowski <mziab@o2.pl> +ONSlaught-20091212.ebuild,
  +files/ONSlaught-20091212-vc.patch:
  Bumped with patch to fix build.

  11 Sep 2009; Michał Ziąbkowski <mziab@o2.pl> +ONSlaught-20090904.ebuild,
  +files/ONSlaught-20090904-sdl_bilinear.patch:
  Bumped with patch to fix build.

  20 Jul 2009; Michał Ziąbkowski <mziab@o2.pl> +ONSlaught-20090715.ebuild:
  Bumped.

  02 Jun 2009; Michał Ziąbkowski <mziab@o2.pl> ONSlaught-20090307.ebuild:
  Fixed install.

  17 Mar 2009; Michał Ziąbkowski <mziab@o2.pl> ONSlaught-20090126.ebuild,
  ONSlaught-20090307.ebuild:
  Added missing dep.

  17 Mar 2009; Michał Ziąbkowski <mziab@o2.pl> +ONSlaught-20090307.ebuild:
  Bumped.

  03 Feb 2009; Michał Ziąbkowski <mziab@o2.pl> +ONSlaught-20090126.ebuild:
  New ebuild.
