@@ -1,14 +1,10 @@
 AUX ONSlaught-20090904-sdl_bilinear.patch 515 RMD160 803d39be7e460ffb83aa4731a9fb149ddae31dd7 SHA1 6d869a984bfcb0191550bda2bf1abd19f3f7c282 SHA256 c7a5eb10dfbf3557da7a4d023fe41ed04294dadb3126df7a65c0cb24ac06bd2b
 AUX ONSlaught-20091212-vc.patch 607 RMD160 9d66a704056ce6f06882bd230d6b6b341ac15fed SHA1 65af3a688638127cd45e08fc99bdb018432cd526 SHA256 9aece1ce70daf6f97809715c056f894e6e39dcdf6b4eb20ca20cd5b87692899c
-DIST ONSlaught-20090904-src.7z 4938699 RMD160 bb46c9e79071a83c3d4d50c7c2f86626b80e226a SHA1 101aa4e041a319bf50b50da6caf352d1e3856a77 SHA256 52be3b9c05cb1153d15eb54d526d599310ff8dd2a13e5510503817d9a740217e
-DIST ONSlaught-20091212-src.7z 2700610 RMD160 43ad52bcc77c79561dd146a71e78f1d0f048451f SHA1 7daadf6653512514af6569e7bc3f8c8a20b1fda7 SHA256 74285a5726a4698e5d5a64dba764e6235d4dedad5c1c821b83d6c49b453bb75c
 DIST ONSlaught-20100714-src.7z 7096862 RMD160 67bd64f0863e733e1a3f8a8d73b51c00e2882e22 SHA1 97c991c213d9ed2b68b814f4b59dae6fb90d8e61 SHA256 16b3db44cd5256d274e29a6697e1a62efd2f92d73b1d86f8941250a6a0dc93b1
 DIST ONSlaught-20110315-src.7z 7418954 RMD160 414dab683b4a2e00dc727910772634bb32414bb9 SHA1 0d911d7b152a80d98117683aff89d1ed4021b2ac SHA256 5fab45d2224c6f97f91268914fb6731dda689791bb69f1c61ba82b8ea0b98be8
 DIST ONSlaught-20110316-src.7z 5997560 RMD160 e0a8708bbe48fd4c9d8d90b0a48a668ff76916bf SHA1 1319f13ae5694dbf0711f1eed22ca38b566284ce SHA256 0793fb20be7efa236eb2e3dbc6de488a954c1a0ecf82cec38f3c2e8a17436031
-EBUILD ONSlaught-20090904.ebuild 963 RMD160 cd3e65968d57d4c6892fa70f7126ef266117459e SHA1 d7173ad9b83b15d10d05957451f5365ac3625e45 SHA256 e9d26a9e1270e41bc455dc7f5a0f5dc9135bee8d38304f6a3cf9dd04cf16f7f5
-EBUILD ONSlaught-20091212.ebuild 953 RMD160 0779fc81849806c1f8c276736f2e465ca5d6591a SHA1 4c19e264caefe60746b898d87381cbdafa3b641b SHA256 41995c745a54bc28665eb0d0c13246e8e7f417d6c161d92f404f7923543a0546
 EBUILD ONSlaught-20100714.ebuild 928 RMD160 5c16a3a28366943cfcea5fecef66ee402b1f1c9d SHA1 95a17f1fab223d7fd8d941b4571ab356098f2ceb SHA256 84bfcb8f44542b1dba5068aeaf763a10f99a5a994095406b73c1790587cb18a8
 EBUILD ONSlaught-20110315.ebuild 1006 RMD160 9717bb72fbf2432ba0409dae0703d015b755c85d SHA1 0f5b239423e5f82f65301578a97fcefbd43492ce SHA256 38ec3e2a33b082844eda4ad58e08e3fe61fd835a62a9f8c06f4e74d8f8603af2
 EBUILD ONSlaught-20110316.ebuild 1006 RMD160 9717bb72fbf2432ba0409dae0703d015b755c85d SHA1 0f5b239423e5f82f65301578a97fcefbd43492ce SHA256 38ec3e2a33b082844eda4ad58e08e3fe61fd835a62a9f8c06f4e74d8f8603af2
-MISC ChangeLog 1537 RMD160 4c060a2770ee11326e555ddc39f0981f51adb258 SHA1 bdcfd300086877b65ab1c79a924ae0e3ac4f3e70 SHA256 51dc28677c84f2f1d184fd5607ae397a642507e8bb91bbe2f7190cb45f3e383d
+MISC ChangeLog 1662 RMD160 b4b8656f324e0550214b9411d4a6d19452475be2 SHA1 348f8b7b4034db27f30bc48b4f2bd6c9fe97d5fb SHA256 4a9b31fdc6041b1f40a21a029210b0338155030ca4427f3ea015067e1cc1f6c4
 MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
