@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 Apr 2011; Michał Ziąbkowski <mziab@o2.pl> -ONSlaught-20090904.ebuild,
+  -ONSlaught-20091212.ebuild:
+  Removed cruft.
+
 *ONSlaught-20110316 (18 Mar 2011)
 
   18 Mar 2011; Michał Ziąbkowski <mziab@o2.pl> +ONSlaught-20110316.ebuild:
